Mobilde HÄ±zlÄ± Ä°letiÅŸim bÃ¶lÃ¼mÃ¼ tamamen gizlendi (960px ve altÄ±)

--- a/css/modern.css
+++ b/css/modern.css
@@ -939,6 +939,17 @@ img {
     display: block;
 }
 
+/* Hide sticky CTA on mobile devices */
+@media (max-width: 960px) {
+    .sticky-cta {
+        display: none !important;
+    }
+    
+    .sticky-cta.show {
+        display: none !important;
+    }
+}
+
 .sticky-inner {
     display: grid;
     grid-template-columns: 1fr auto auto;
